Inconvéniants de Borg

--- a/main.tex
+++ b/main.tex
@@ -47,6 +47,7 @@
 	\item Développé en interne.
 	\item Manager de containers.
 	\item Objectif : réduction des coups en partageant machines et applications.
+	\item \textbf{Inconvéniant : notion de travail, gestion des ports}
 	\item \textbf{Non open-source.}
 	\end{itemize}	\pause
 \item Omega	
