Mise en place du rolling update

--- a/main.tex
+++ b/main.tex
@@ -327,8 +327,6 @@ Un objet Deployment
 	\end{itemize}
 	\item Permet également le rollback après deployment.
 \end{itemize}
-
-
 \end{column}
 \begin{column}{0.5\textwidth}
 \begin{figure}
@@ -339,6 +337,16 @@ Un objet Deployment
 
 \end{column}
 \end{columns}
+\end{frame}
+\begin{frame}{Exemple du Rolling-Update}
+\begin{figure}
+\centering
+\includegraphics<1>[scale=0.25]{images/img19.png}
+\includegraphics<2>[scale=0.25]{images/img20.png}
+\includegraphics<3>[scale=0.25]{images/img21.png}
+\includegraphics<4>[scale=0.25]{images/img22.png}
+\caption{Exemple du Rolling Update tiré de la documentation Kubernetes}
+\end{figure}
 \end{frame}
 
 \subsection{Services}
