--- a/main.tex
+++ b/main.tex
@@ -401,32 +401,49 @@ communique l'état du node au master node.
 \subsection{Kubernetes Master}
 \begin{frame}{Kubernetes Master}
 
+\begin{block}{Master Node}
+Le master node est responsable du management du cluster Kubernetes.
+\begin{itemize}
+\item C'est le point d'entré de toutes les tâches administratives.
+\item Il est le responsable de \textit{l'orchestration} des worker-nodes 
+\item Il est composé de plusieurs sous éléments.
+\end{itemize}
+\end{block}
 
+\begin{block}{API Server}
+C'est le point d'entrée pour toutes les commandes utilisé pour contrôler le cluster.\\
+Il récupère les commandes (REST), les valides, et les exécutes.  \\Le résultat de ces commandes est conservé dans \textit{etcd}.
+\end{block}
 
+\begin{block}{etcd}
+etcd est utilisé pour partager la configuration et la découverte de service.\\ Il fournit une API pour des opérations CRUD et permet aux nœuds de s'enregistrer (pour pouvoir être informé d'un changement de configuration)\\
+\vspace{10px}
+Exemple : la création de pod/service, l'état, namespaces, replication information.
 
-The master node is responsible for the management of Kubernetes cluster. This is the entry point of all administrative tasks. The master node is the one taking care of orchestrating the worker nodes, where the actual services are running.
-
-Let's dive into each of the components of the master node.
-API server
-
-The API server is the entry points for all the REST commands used to control the cluster. It processes the REST requests, validates them, and executes the bound business logic. The result state has to be persisted somewhere, and that brings us to the next component of the master node.
-etcd storage
-
-etcd is a simple, distributed, consistent key-value store. It’s mainly used for shared configuration and service discovery.
-It provides a REST API for CRUD operations as well as an interface to register watchers on specific nodes, which enables a reliable way to notify the rest of the cluster about configuration changes.
-
-An example of data stored by Kubernetes in etcd is jobs being scheduled, created and deployed, pod/service details and state, namespaces and replication information, etc.
-scheduler
-
-The deployment of configured pods and services onto the nodes happens thanks to the scheduler component.
-The scheduler has the information regarding resources available on the members of the cluster, as well as the ones required for the configured service to run and hence is able to decide where to deploy a specific service.
-controller-manager
-
-Optionally you can run different kinds of controllers inside the master node. controller-manager is a daemon embedding those.
-A controller uses apiserver to watch the shared state of the cluster and makes corrective changes to the current state to change it to the desired one.
-An example of such a controller is the Replication controller, which takes care of the number of pods in the system. The replication factor is configured by the user, and it's the controller’s responsibility to recreate a failed pod or remove an extra-scheduled one.
-Other examples of controllers are endpoints controller, namespace controller, and serviceaccounts controller, but we will not dive into details here.
+\end{block}
 \end{frame}
+
+
+\begin{frame}{Kubernetes Master}
+\begin{block}{kube-scheduler}
+Le scheduler permet le deployment de pods configurer et de services sur les nodes.
+\begin{itemize}
+\item Il possède les informations des ressources disponibles.
+\item Il possède également les informations requises pour l'exécution du service.
+\item Il choisit l'endroit du déploiement.
+\end{itemize}
+\end{block}
+
+\begin{block}{kube-controller-manager}
+C'est un composant qui possède plusieurs controllers.
+\begin{itemize}
+\item Node Controller : Responsable de la bonne gestion des noeuds.
+\item Replication Controller : Responsable du maintient du bon nombre de pods pour chaque ReplicatSet objet du système.
+\item Endpoints Controller : Service qui associe service et pods.
+\end{itemize}
+\end{block}
+\end{frame}
+
 
 \subsection{General Overview}
 \begin{frame}{Kubernetes Overview}
