ajout des références -> go miam

--- a/main.tex
+++ b/main.tex
@@ -501,8 +501,8 @@ D'après le commit 5871b50 de https://github.com/kubernetes/kubernetes/ il y a 3
 
 \end{frame}
 
-\begin{frame}{Comment Kubernetes Scheduler place-t-il ce Pod?}
-TODO : https://www.youtube.com/watch?v=bbPcb2JuJPw&t=601s
+\begin{frame}{Comment Kubernetes Scheduler détermine-t-il le bon node pour ce pod?}
+TODO : \url{https://www.youtube.com/watch?v=bbPcb2JuJPw&t=601s}
 \end{frame}
 
 \subsection{Algorithm for the Replication Controller}
@@ -518,6 +518,46 @@ TODO : https://www.youtube.com/watch?v=bbPcb2JuJPw&t=601s
 \end{frame}
 
 \subsection{Références}
+
+
+\begin{frame}{Références}
+\begin{itemize}
+\item Kubernetes Documentation. 2018. Nodes | Kubernetes. [ONLINE] Available at: \url{https://kubernetes.io/docs/concepts/architecture/nodes/}. [Accessed 10 February 2018].
+\item Kubernetes Documentation. 2018. Service | Kubernetes. [ONLINE] Available at: \url{https://kubernetes.io/docs/concepts/services-networking/service/}. [Accessed 10 February 2018].
+\item Kubernetes Documentation. 2018. Pods | Kubernetes. [ONLINE] Available at: \url{https://kubernetes.io/docs/concepts/workloads/pods/pod-overview/}. [Accessed 10 February 2018].
+\item Kubernetes Documentation. 2018. Concepts | Kubernetes. [ONLINE] Available at: \url{https://kubernetes.io/docs/concepts/}. [Accessed 10 February 2018].
+\item acmqueue, BRENDAN BURNS, BRIAN GRANT, DAVID OPPENHEIMER, ERIC BREWER, AND JOHN WILKES, GOOGLE INC., 2016. Borg, Omega, and Kubernetes. System evolution, [Online]. 14/1, 70. Available at: \url{https://queue.acm.org/detail.cfm?id=2898444} [Accessed 10 February 2018].
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Références}
+\begin{itemize}
+\item Quora - Jorg Brown. 2015. What is Borg at Google?. [ONLINE] Available at: \url{https://www.quora.com/What-is-Borg-at-Google}. [Accessed 10 February 2018].
+\item The Morning Paper - Adrian Colyer. 2015. Large-scale cluster management at Google with Borg. [ONLINE] Available at: \url{https://blog.acolyer.org/2015/05/07/large-scale-cluster-management-at-google-with-borg/}. [Accessed 10 February 2018].
+\item Carla Schroder. 2017. What Makes Up a Kubernetes Cluster?. [ONLINE] Available at: \url{https://www.linux.com/news/learn/chapter/intro-to-kubernetes/2017/4/what-makes-kubernetes-cluster}. [Accessed 10 February 2018].
+\item Fabrice Jammes - Cloud Native Computing Fundation. 2017. Kubernetes et les micro-services. [ONLINE] Available at: \url{https://indico.in2p3.fr/event/16962/attachments/46065/57449/Kube_webinaire_RI3_201801.pdf}. [Accessed 10 February 2018].
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}{Références}
+\begin{itemize}
+\item Nune Isabekyan. 2016. Introduction to Kubernetes Architecture</em>. [ONLINE] Available at: \url{https://x-team.com/blog/introduction-kubernetes-architecture/}. [Accessed 10 February 2018].
+\item Julia Evans. 2017. A few things I've learned about Kubernetes. [ONLINE] Available at: \url{https://jvns.ca/blog/2017/06/04/learning-about-kubernetes/}. [Accessed 10 February 2018].
+\item Julia Evans. 2018. How does the Kubernetes scheduler work?. [ONLINE] Available at: \url{https://jvns.ca/blog/2017/07/27/how-does-the-kubernetes-scheduler-work/}. [Accessed 10 February 2018].
+\item YouTube. (2018). Kubernetes Scheduling Features or How Can I Make the System Do What I Want? [I] - Marek Grabowski. [Online Video]. 17 April 2017. Available from: \url{https://www.youtube.com/watch?v=bbPcb2JuJPw&t=601s}. [Accessed: 10 February 2018].
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}{Références}
+\begin{itemize}
+
+\item YouTube. (2018). Container clusters with Kubernetes -Tim Hockin. [Online Video]. 21 April 2015. Available from: \url{https://www.youtube.com/watch?v=KIdK5WGZUms}. [Accessed: 10 February 2018].
+\item YouTube. (2018). Dockers Containers \& Kubernetes - Brian Dorsey. [Online Video]. 7 June 2015. Available from: \url{https://www.youtube.com/watch?v=KIdK5WGZUms}. [Accessed: 10 February 2018].
+\end{itemize}
+\end{frame}
+
 \end{document}
 
 
