Correction d'une référence -> go miam

--- a/main.tex
+++ b/main.tex
@@ -554,7 +554,7 @@ TODO : \url{https://www.youtube.com/watch?v=bbPcb2JuJPw&t=601s}
 \begin{itemize}
 
 \item YouTube. (2018). Container clusters with Kubernetes -Tim Hockin. [Online Video]. 21 April 2015. Available from: \url{https://www.youtube.com/watch?v=KIdK5WGZUms}. [Accessed: 10 February 2018].
-\item YouTube. (2018). Dockers Containers \& Kubernetes - Brian Dorsey. [Online Video]. 7 June 2015. Available from: \url{https://www.youtube.com/watch?v=KIdK5WGZUms}. [Accessed: 10 February 2018].
+\item YouTube. (2018). Dockers Containers \& Kubernetes - Brian Dorsey. [Online Video]. 7 June 2015. Available from: \url{https://www.youtube.com/watch?v=BaHp8YXIsD0}. [Accessed: 10 February 2018].
 \end{itemize}
 \end{frame}
 
